--- a/src/styles/ShoppingList.css
+++ b/src/styles/ShoppingList.css
@@ -9,7 +9,8 @@
 .jh-plant-item {
 	border: solid 2px black;
 	border-radius: 10px;
-	height: 150px;
+	/* height: 150px; */
+	min-height: 150px;
 	width: 150px;
 	margin: 10px;
 	display: flex;
@@ -22,7 +23,7 @@
 .jh-sales {
 	position: absolute;
 	right: 0px;
-	top: 10px;
+	top: 20px;
 	font-weight: 500;
 	color: white;
 	padding: 5px 10px;
