--- a/src/styles/ShoppingList.css
+++ b/src/styles/ShoppingList.css
@@ -6,7 +6,7 @@
 	max-width: 800px;
 }
 
-/* .jh-plant-item {
+.jh-plant-item {
 	border: solid 2px black;
 	border-radius: 10px;
 	height: 150px;
@@ -16,4 +16,4 @@
 	align-items: center;
 	justify-content: center;
 	flex-direction: column;
-} */
+}
